--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 PORT=5000
-DB_URI=mongodb+srv://dev:niptict19@cluster0-ikvxn.mongodb.net/test?retryWrites=true&w=majority
+DB_URI=mongodb+srv://kg-all-dev:Q1p2m3g4@cluster0-devyg.mongodb.net/test?retryWrites=true&w=majority
 JWT_SECRET=%^&kwicms319842__71839^HBSksmdil
 TZ=UTC
+
+CLOUD_NAME=sva
+CLOUD_API_KEY=975547421473123
+CLOUD_API_SECRET=nR_Hy44bY4kod9dTxjRTqVqFtuA
+CLOUDINARY_URL=cloudinary://975547421473123:nR_Hy44bY4kod9dTxjRTqVqFtuA@sva
