--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fresh node",
   "main": "index.js",
   "scripts": {
-    "start": "npx node-ts src/server.ts",
+    "start": "node-ts src/server.ts",
     "dist": "sh ./scripts/dist.sh",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
@@ -48,11 +48,11 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.13",
     "multer": "^1.4.1",
+    "nodemon": "^2.0.4",
     "querystring": "^0.2.0",
     "reflect-metadata": "^0.1.12",
     "shortid": "^2.2.14",
     "typegoose": "^5.6.0",
-    "typescript": "^3.3.3333",
     "unique-random": "^2.1.0",
     "uuid": "^3.3.2"
   },
@@ -63,14 +63,14 @@
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/mongoose": "^5.7.36",
-    "@types/node": "^10.12.29",
+    "@types/node": "^10.17.35",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.2",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.9.7"
   },
   "husky": {
     "hooks": {
