--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fresh node",
   "main": "src/server.ts",
   "scripts": {
-    "start": "ts-node src/server.ts",
+    "start": "npx ts-node src/server.ts",
     "dist": "sh ./scripts/dist.sh",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
