--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NODE_ENV='dev'
 DB_URI=mongodb+srv://kg-all-dev:Q1p2m3g4@cluster0-devyg.mongodb.net/test?retryWrites=true&w=majority
 JWT_SECRET=%^&kwicms319842__71839^HBSksmdil
 TZ=UTC
