--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Fresh node",
   "main": "src/server.ts",
   "scripts": {
-    "start": "node build/server.js",
+    "start-prod": "node build/server.js",
+    "start-dev": "NODE_ENV=dev npx ts-node src/server.ts",
     "dist": "sh ./scripts/dist.sh",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
@@ -49,7 +50,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.13",
     "multer": "^1.4.1",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.5",
     "querystring": "^0.2.0",
     "reflect-metadata": "^0.1.12",
     "shortid": "^2.2.14",
@@ -72,18 +73,6 @@
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.9.7"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.(ts|tsx)": [
-      "npm run prettier:one",
-      "npm run lint:write:one",
-      "git add"
-    ]
   },
   "heroku-run-build-script": true
 }
