--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/server.ts",
   "scripts": {
     "start-prod": "node build/server.js",
-    "start-dev": "NODE_ENV=dev npx ts-node src/server.ts",
+    "start-dev": "NODE_ENV=dev nodemon -x ts-node src/server.ts",
+    "start": "ts-node src/server.ts",
+    "dev": "NODE_ENV=dev nodemon -x ts-node src/server.ts",
     "dist": "sh ./scripts/dist.sh",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
