--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint:write:one": "tslint --project tsconfig.json --fix",
     "prettier": "prettier --write src/**/*.ts",
     "prettier:one": "prettier --write",
-    "lintAndPretty": "npm run prettier && npm run lint:write"
+    "lintAndPretty": "npm run prettier && npm run lint:write",
+    "postinstall": "npm run build"
   },
   "engines": {
     "node": "12.10.0"
