--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start-prod": "node build/server.js",
     "start-dev": "NODE_ENV=dev nodemon -x ts-node src/server.ts",
-    "start": "ts-node src/server.ts",
+    "start": "npm run serve",
+    "serve": "node build/server.js",
     "dev": "NODE_ENV=dev nodemon -x ts-node src/server.ts",
     "dist": "sh ./scripts/dist.sh",
     "test": "echo \"Error: no test specified\" && exit 1",
