--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "description": "Fresh node",
   "main": "src/server.ts",
   "scripts": {
-    "start-prod": "node build/server.js",
-    "start-dev": "NODE_ENV=dev nodemon -x ts-node src/server.ts",
-    "start": "npm run serve",
-    "serve": "node build/server.js",
-    "dev": "NODE_ENV=dev nodemon -x ts-node src/server.ts",
     "dist": "sh ./scripts/dist.sh",
+    "start-dev": "DB_URI='mongodb+srv://kg-all-dev:Q1p2m3g4@cluster0-devyg.mongodb.net/test?retryWrites=true&w=majority' nodemon",
+    "start": "npm run build && node build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "rimraf ./build && tsc",
     "lint": "tslint --project tsconfig.json src/**/*.ts",
     "lint:one": "tslint --project tsconfig.json",
     "lint:write": "tslint --project tsconfig.json src/**/*.ts --fix",
@@ -72,6 +69,7 @@
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.2",
+    "rimraf": "^3.0.2",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.1",
