--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.ts",
   "scripts": {
     "dist": "sh ./scripts/dist.sh",
-    "start-dev": "DB_URI='mongodb+srv://kg-all-dev:Q1p2m3g4@cluster0-devyg.mongodb.net/test?retryWrites=true&w=majority' nodemon",
+    "start-dev": "nodemon",
     "start": "npm run build && node build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf ./build && tsc",
